<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluemid"
    android:orientation="vertical"
    tools:context=".menu.AboutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/acerca"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagenperfil"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

        <!--<TextView
            android:id="@+id/tv_nombreperfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />
            -->
    <!--</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">
-->
        <Button
            android:id="@+id/btn_configuraciones"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/bluelow"
            android:layout_marginTop="35dp"
            android:text="@string/config" />

        <Button
            android:id="@+id/btn_unidades"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/bluelow"
            android:text="@string/uni" />

        <Button
            android:id="@+id/btn_idiomas"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/bluelow"
            android:text="@string/idio" />

        <Button
            android:id="@+id/btn_datos_per"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/bluelow"
            android:text="@string/dato" />

        <!--<Button
            android:id="@+id/btn_recipientes"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/bluelow"
            android:text="@string/Reci" />-->

        <Button
            android:id="@+id/btn_cerrar_sesion"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/bluelow"
            android:text="@string/cerrar" />


    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/botton_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/bluelow"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />


</RelativeLayout>