<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluedeep"
    android:orientation="vertical"
    tools:context=".RecuperarActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/recordar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/correo"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_correoRecuperar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btn_restablecercontrasena"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/restablecer" />

    </LinearLayout>


</LinearLayout>